# clocky

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: lib.rs  main.rs  render.rs  simulation.rs
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
web/src/: main.js  work.js
