[package]
name = "clocky"
version = "0.1.0"
edition = "2024"
[[bin]]
name="native"
path = "src/main.rs"

# [lib]
# name = "clocky_wasm"
# crate-type = ["cdylib","rlib"]
# path = "src/lib.rs"


[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
nalgebra = "0.33.2"

pollster = "0.4.0"
rand = "0.9.1"


rayon = "1.10.0"
vello = "0.5.0"

getrandom = { version = "0.3.3", features = ["wasm_js"] }

winit = "0.30.11"
pid = "4.0.0"

# 仅用于 WASM 的依赖

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "*"
rapier2d = { version = "0.26.0" }
wasm_thread = "0.3.3"

wasm-bindgen-futures = "0.4.50"

#其他平台
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rapier2d = { version = "0.26.0", features = ["parallel", "simd-stable"] }
