[package]
name = "clocky"
version = "0.1.0"
edition = "2024"
# [[bin]]
# name="native"
# path = "src/main.rs"

[lib]
name = "clocky"
crate-type = ["cdylib","rlib"]


[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
nalgebra = "0.33.2"

pollster = "0.4.0"
rand = "0.9.1"


rayon = "1.10.0"
vello = "0.5.0"

getrandom = { version = "0.3.3", features = ["wasm_js"] }

winit = "0.30.11"
pid = "4.0.0"
log = "0.4.27"


# 仅用于 WASM 的依赖

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "*"
rapier2d = { version = "0.26.0" }
wasm_thread = "0.3.3"

wasm-bindgen-futures = "0.4.50"

#其他平台
[target.'cfg(target_os = "windows")'.dependencies]
rapier2d = { version = "0.26.0", features = [ "simd-stable"] }

[target.'cfg(target_os = "linux")'.dependencies]
rapier2d = { version = "0.26.0", features = ["simd-stable"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"
winit = { version = "*", features = ["android-native-activity"] }
rapier2d = "0.26.0"


[package.metadata.android]
# Name of your APK as shown in the app drawer and in the app switcher
apk_label = "Hip Startup"
 
# The target Android API level.
target_sdk_version = 29
min_sdk_version = 26
name = "com.google.androidgamesdk.GameActivity"
# See: https://developer.android.com/guide/topics/manifest/activity-element#screen
orientation = "landscape"
[package.metadata.android.signing.release]
path = "/home/fuwaki/.android/debug.keystore"  # 调试密钥库路径
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"